syntax = "proto3";

option  go_package = "../protobuf";
option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";

package protobuf;

// The AccServer service definition.
service AccServer {
    // 发送消息
    rpc SendMsg (SendMsgReq) returns (SendMsgRsp) {}
    // 给这台机器的房间内所有用户发送消息
    rpc SendMsgAll (SendMsgAllReq) returns (SendMsgAllRsp) {}
    // 获取用户列表
    rpc GetRoomUserList (GetRoomUserListReq) returns (GetRoomUserListRsp) {}
}

message ResponUserOnline {
    uint32 id = 1;
    string nickName = 2;
    string avatar = 3;
}

// 发送消息
message SendMsgReq {
    uint32 appID = 1; // appID
    uint32 roomID = 2; // 房间Id
    uint32 userID = 3; // 用户ID
    string data = 4; // msg
    bool isLocal = 5; // 是否查询本机 acc内部调用为:true(本机查询不到即结束)
}

message SendMsgRsp {
    uint32 retCode = 1;
    string errMsg = 2;
}

// 给这台机器的房间内所有用户发送消息
message SendMsgAllReq {
    uint32 appID = 1; // appID
    uint32 roomID = 2; // 房间Id
    uint32 userID = 3; // 不发送的用户ID
    string data = 4; // data
}

message SendMsgAllRsp {
    uint32 retCode = 1;
    string errMsg = 2;
}

// 获取用户列表
message GetRoomUserListReq {
    uint32 appID = 1;
    uint32 roomID = 2;
}

message GetRoomUserListRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    repeated  ResponUserOnline resUserOnline = 3;
}